--- a/samples/Sample.RabbitMQ.MySql/Sample.RabbitMQ.MySql.csproj
+++ b/samples/Sample.RabbitMQ.MySql/Sample.RabbitMQ.MySql.csproj
@@ -8,6 +8,11 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.4" />
     <PackageReference Include="DotNetCore.CAP.RabbitMQ" Version="3.1.2" />
     <PackageReference Include="DotNetCore.CAP.Dashboard" Version="3.1.2" />
+    <PackageReference Include="AspectCore.Extensions.Hosting" Version="2.1.0" />
+    <PackageReference Include="AspectCore.Extensions.AspectScope" Version="2.1.0" />
+    <PackageReference Include="AspectCore.Extensions.Configuration" Version="2.1.0" />
+    <PackageReference Include="AspectCore.Extensions.DependencyInjection" Version="2.1.0" />
+    <PackageReference Include="Dapper" Version="2.0.35" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\src\Bing.External.CAP.MySql\Bing.External.CAP.MySql.csproj" />
